--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
-<html>
-    <head>
-        <title>Demo App</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <h1>Real-time CPU Utilization Chart</h1>
-        <div id="chart_div"></div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo v1</title>
+</head>
+<body>
+    <h1>Hello World!!</h1>
+</body>
 </html>
